--- a/src/components/openings/openings.scss
+++ b/src/components/openings/openings.scss
@@ -32,4 +32,8 @@
   & img {
     color: white;    
   }
+
+  @media only screen and (max-width: 768px) {
+    display: none;
+  }
 }
