--- a/src/pages/careers/careerDetail/careerDetails.scss
+++ b/src/pages/careers/careerDetail/careerDetails.scss
@@ -1,5 +1,5 @@
 .career-details-heading-container {
-  width: 100vw;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
 }
